--- a/themes/original/scss/_common.scss
+++ b/themes/original/scss/_common.scss
@@ -1889,6 +1889,7 @@ table.show_create {
   bottom: 0;
   left: 0;
   z-index: 100;
+  pointer-events: none;
 }
 
 textarea {
@@ -1913,6 +1914,7 @@ textarea {
     background: #ccc;
     border-top: solid 1px #aaa;
     cursor: n-resize;
+    pointer-events: auto;
 
     span {
       vertical-align: middle;
