--- a/themes/pmahomme/scss/_common.scss
+++ b/themes/pmahomme/scss/_common.scss
@@ -2070,6 +2070,7 @@ table.show_create {
   bottom: 0;
   left: 0;
   z-index: 100;
+  pointer-events: none;
 }
 
 textarea {
@@ -2093,6 +2094,7 @@ textarea {
     background: #ccc;
     border-top: solid 1px #aaa;
     cursor: n-resize;
+    pointer-events: auto;
 
     span {
       vertical-align: middle;
